sandbox/output
AnagramTest.java:16: error: cannot find symbol
        assertEquals("a", anagram.generate("a"));
                          ^
  symbol:   variable anagram
  location: class AnagramTest
1 error
